Mon Aug  3 13:05:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_{permutation,combination,product}): must not use
	  ary_discard on strings.

Sat Aug  1 19:23:27 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_trans): change condition of singlebyte
	  optimization.

Sat Aug  1 05:18:36 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_trans): can't use singlebyte optimization when
	  the replacement is multibyte. [ruby-core:24612]

Fri Jul 31 16:28:33 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_stdio_set_default_encoding): added.

	* ruby.c (process_options): call rb_stdio_set_default_encoding
	  after setting defualt internal and external.

Fri Jul 31 18:01:34 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/securerandom.rb (SecureRandom.random_bytes): return string should
	  be ASCII-8BIT.  [ruby-core:24640]

Fri Jul 31 10:54:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (literal_concat_gen): reduced unnecessary node at string
	  literal concatenation with empty head dstr.  [ruby-dev:38968]

Fri Jul 31 02:57:39 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (literal_concat_gen): NODE_DSTR was incorrectly handled as
	  NODE_STR.  [ruby-dev:38968]

	* bootstraptest/test_syntax.rb: add a test for above.

Thu Jul 30 23:04:32 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* gem_prelude.rb (Gem.path): uses Gem.default_path as a default value
	  so that ruby finds gems in ~/.gem/.
	  (Gem.user_home): reduced version of lib/rubygems.rb's.
	  Gem.default_path needs it.

Thu Jul 30 21:39:42 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_compile_each): fix stack consistency error.
	  [ruby-core:24611]

	* bootstraptest/test_method.rb: add tests for above.

Thu Jul 30 16:45:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (defineclass): preserve encoding of class/module
	  names.  [ruby-core:24600]

	* variable.c (rb_set_class_path_string): set class path with a
	  string value.
